--- a/src/gamePlatform.html
+++ b/src/gamePlatform.html
@@ -34,61 +34,81 @@
 				<ul class="g-list">
 					<li class="g-item">
 						<a href="#">
-							<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							<div class="img-wrap">
+								<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							</div>
 							<div class="game-name">百家乐</div>
 						</a>
 					</li>
 					<li class="g-item">
 						<a href="#">
-							<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							<div class="img-wrap">
+								<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							</div>
 							<div class="game-name">百家乐</div>
 						</a>
 					</li>
 					<li class="g-item">
 						<a href="#">
-							<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							<div class="img-wrap">
+								<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							</div>
 							<div class="game-name">百家乐</div>
 						</a>
 					</li>
 					<li class="g-item">
 						<a href="#">
-							<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							<div class="img-wrap">
+								<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							</div>
 							<div class="game-name">百家乐</div>
 						</a>
 					</li>
 					<li class="g-item">
 						<a href="#">
-							<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							<div class="img-wrap">
+								<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							</div>
 							<div class="game-name">百家乐</div>
 						</a>
 					</li>
 					<li class="g-item">
 						<a href="#">
-							<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							<div class="img-wrap">
+								<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							</div>
 							<div class="game-name">百家乐</div>
 						</a>
 					</li>
 					<li class="g-item">
 						<a href="#">
-							<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							<div class="img-wrap">
+								<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							</div>
 							<div class="game-name">百家乐</div>
 						</a>
 					</li>
 					<li class="g-item">
 						<a href="#">
-							<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							<div class="img-wrap">
+								<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							</div>
 							<div class="game-name">百家乐</div>
 						</a>
 					</li>
 					<li class="g-item">
 						<a href="#">
-							<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							<div class="img-wrap">
+								<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							</div>
 							<div class="game-name">百家乐</div>
 						</a>
 					</li>
 					<li class="g-item">
 						<a href="#">
-							<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							<div class="img-wrap">
+								<img class="game-pic" src="img/game/fantan.png" alt="" width="110">
+							</div>
 							<div class="game-name">百家乐</div>
 						</a>
 					</li>
