--- a/src/myCard.html
+++ b/src/myCard.html
@@ -24,7 +24,7 @@
 
 	<div class="container center-block my-card">
 		<ul class="card-list">
-			<li class="card">
+			<li class="card" style="background-image:url('./img/bank.png')">
 				<a href="cardDetail.html">
 					<img class="bank-icon" src="./img/CCB_small.png">
 					<div class="cont">
