--- a/src/myInfo.html
+++ b/src/myInfo.html
@@ -55,6 +55,71 @@
 							</div>
 							<a class="go-detail" href="">查看详情 ></a>
 						</li>
+						<!-- 待付款 -->
+						<li class="r-item  selected">
+							<input class="yg-checkbox" type="checkbox">
+							<div class="rec-wrap unpaid">
+								<div class="top"><span class="sn">单号：23423435</span><span class="status">待付款</span>
+								</div>
+								<div class="time"><span class="label">充值金额</span><span>5000 USD</span></div>
+								<div class="text"><span class="label">充值银行</span><span>中国建设银行(2166)</span></div>
+								<div class="text bottom">
+									<span class="label">2018-08-28 12:00:21</span>
+									<a class="go-detail" target="_blank" href="recRecordDetail.html">查看详情></a>
+								</div>
+							</div>
+						</li>
+						<!-- 处理中 -->
+						<li class="r-item">
+							<input class="yg-checkbox" type="checkbox">
+							<div class="rec-wrap Processing">
+								<div class="top">
+									<span class="sn">订单处理中</span>
+								</div>
+								<div class="time"><span class="label">充值金额</span><span>5000 USD</span></div>
+								<div class="text"><span class="label">充值银行</span><span>中国建设银行(2166)</span></div>
+								<div class="text bottom">
+									<span class="label">2018-08-28 12:00:21</span>
+									<a class="go-detail" target="_blank" href="recRecordDetail.html">查看详情></a>
+								</div>
+							</div>
+						</li>
+						<!-- 已完成 -->
+						<li class="r-item">
+							<input class="yg-checkbox" type="checkbox">
+							<div class="rec-wrap completed">
+								<div class="top"><span class="sn">单号：23423435</span><span class="status">已完成</span>
+								</div>
+								<div class="time"><span class="label">充值金额</span><span>5000 USD</span></div>
+								<div class="text"><span class="label">充值银行</span><span>中国建设银行(2166)</span></div>
+								<div class="text bottom"><span class="label">2018-08-28
+										12:00:21</span><button>删除</button></div>
+							</div>
+						</li>
+						<!-- 未通过 -->
+						<li class="r-item">
+							<input class="yg-checkbox" type="checkbox">
+							<div class="rec-wrap  notpass">
+								<div class="top"><span class="sn">单号：23423435</span><span class="status">审核未通过</span>
+								</div>
+								<div class="time"><span class="label">充值金额</span><span>5000 USD</span></div>
+								<div class="text"><span class="label">充值银行</span><span>中国建设银行(2166)</span></div>
+								<div class="text bottom"><span class="label">2018-08-28
+										12:00:21</span><button>删除</button></div>
+							</div>
+						</li>
+						<!-- 已取消 -->
+						<li class="r-item">
+							<input class="yg-checkbox" type="checkbox">
+							<div class="rec-wrap  cancelled">
+								<div class="top"><span class="sn">单号：23423435</span><span class="status">已取消</span>
+								</div>
+								<div class="time"><span class="label">充值金额</span><span>5000 USD</span></div>
+								<div class="text"><span class="label">充值银行</span><span>中国建设银行(2166)</span></div>
+								<div class="text bottom"><span class="label">2018-08-28
+										12:00:21</span><button>删除</button></div>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
