--- a/src/passwordAppeal.html
+++ b/src/passwordAppeal.html
@@ -34,12 +34,10 @@
 					<label>申诉原因:</label>
 					<select id="reason">
 						<option class="placeholder" value='' disabled selected style='display:none;'>请选择申诉原因</option>
-						<option value="volvo">邮箱找回登录密码</option>
-						<option value="saab">手机号找回登录密码</option>
-						<option value="opel">重置登录密码</option>
-						<option value="audi">修改交易密码</option>
-						<option value="audi">重置交易密码</option>
-						<option value="audi">重置二级密码</option>
+						<option value="1">手机号找回登录密码</option>
+						<option value="2">重置登录密码</option>
+						<option value="3">修改交易密码</option>
+						<option value="4">重置交易密码</option>
 					</select>
 				</div>
 				<div class="item">
@@ -47,25 +45,25 @@
 					<input id="acc" type="text" placeholder="请输入永高账号">
 				</div>
 
-				<div class="item" style="display:none;">
-					<label for="identy">身份证号:</label>
-					<input id="identy" type="text" placeholder="请输入绑定的邮箱">
-				</div>
+				<!-- <div class="item" style="display:none;">
+					<label for="idNum">身份证号:</label>
+					<input id="idNum" type="text" placeholder="请输入绑定的邮箱">
+				</div> -->
 
-				<div class="item">
-					<label for="tel">预留手机号:</label>
+				<div class="item" id="phoneItem">
+					<label for="tel">绑定的手机号:</label>
 					<input id="tel" type="text" placeholder="请输入绑定的手机号码">
 				</div>
 
-				<div class="item" style="display:none;">
-					<label for="email">预留邮箱:</label>
+				<div class="item" id="emailItem" style="display:none;">
+					<label for="email">绑定的邮箱:</label>
 					<input id="email" type="text" placeholder="请输入绑定的邮箱">
 				</div>
 
 				<div class="item">
 					<label for="verCode">验证码:</label>
-					<input id="verCode" type="number" placeholder="请输入验证码">
-					<button class="code-btn">获取验证码</button>
+					<input id="verCode" type="text" placeholder="请输入验证码" maxlength="6">
+					<button id="codeBtn" class="code-btn">获取验证码</button>
 				</div>
 				<button id="firstBtn" class="primary submit">下一步</button>
 			</div>
@@ -73,7 +71,7 @@
 
 			<!-- 步骤二 -->
 			<div id="secondBox" class="form-wrap" style="display:none">
-				<div class="item">
+				<div class="item" style="display:none">
 					<label for="oldPsw">输入旧密码:</label>
 					<div class="input-wrap">
 						<input id="oldPsw" type="password" placeholder="旧密码">
@@ -81,14 +79,14 @@
 					</div>
 				</div>
 				<div class="item">
-					<label for="psw">设置密码:</label>
+					<label for="psw">设置新密码:</label>
 					<div class="input-wrap">
 						<input id="psw" type="password" placeholder="6~20位数字与字母组成">
 						<i class="icon-eyes"></i>
 					</div>
 				</div>
 				<div class="item">
-					<label for="confirmPsw">确认密码:</label>
+					<label for="confirmPsw">确认新密码:</label>
 					<div class="input-wrap">
 						<input id="confirmPsw" type="password" placeholder="再次输入密码">
 						<i class="icon-eyes"></i>
@@ -116,23 +114,129 @@
 	<!-- endbuild -->
 
 	<script type="text/javascript">
+		// 选择密码申诉原因
+		function selectReason() {
+			var $title = $(".title span");
+			var initText = $title.text();
+			var phoneItem = $("#phoneItem");
+			var emailItem = $("#emailItem");
+			$("#reason").change(function () {
+				var curText = $(this).find("option:selected").text();
+				curText = initText + "(" + curText + ")";
+				$title.text(curText);
+			})
+		}
+
+		// 步骤一表单验证
+		function step1Form() {
+			$("#firstBtn").click(function () {
+				var reasonInput = $("#reason");
+				var accountInput = $("#acc");
+				var telInput = $("#tel");
+				var emailInput = $("#email");
+				var vercodeInput = $("#verCode");
+				var eInfoDom = ''; // 错误提示
+				$('.yg-error').remove(); //重置所有错误提示
+
+				if (!verification(reasonInput.val(), 'require')) {
+					eInfoDom = errorInfo('请选择申诉原因');
+					reasonInput.parent().append(eInfoDom); // 输入提示插入到input末尾
+					return;
+				} else if (!verification(accountInput.val(), 'require')) {
+					eInfoDom = errorInfo('请填写账号');
+					accountInput.parent().append(eInfoDom);
+					return;
+				} else if (!verification(telInput.val(), 'require')) {
+					eInfoDom = errorInfo('请填写绑定的手机号码');
+					telInput.parent().append(eInfoDom);
+					return;
+				} else if (!verification(vercodeInput.val(), 'require')) {
+					eInfoDom = errorInfo('请输入验证码');
+					vercodeInput.parent().append(eInfoDom);
+					return;
+				} else {
+					// ajax 提交成功后到下一步
+					$("#firstBox").hide();
+					$("#secondBox").show();
+				}
+			})
+		}
+
+		// 获取验证码事件绑定
+		function vercodeBtn() {
+			// 验证码倒计时
+			function vercodeTime() {
+				var btn = $("#codeBtn");
+				var time = 60;
+				var timeUnit = 's';
+				btn.html(time + timeUnit + "后重发");
+				btn.attr("disabled", true);
+				var timer = setInterval(function () {
+					time--;
+					btn.html(time + timeUnit + "后重发");
+					if (time <= 0) {
+						btn.removeAttr('disabled');
+						btn.html('获取验证码');
+						clearInterval(timer);
+					}
+				}, 1000)
+			}
+
+			$("#codeBtn").click(function () {
+				var phone = $("#tel").val();
+				var email = $("#email").val();
+				var reasonInput = $("#reason");
+				if (!verification(phone, 'require')) {
+					ygToast('请输入绑定的手机号码');
+					return;
+				} else {
+					vercodeTime();
+					//alert("验证码已发送");
+				}
+			})
+		}
+
+		// 步骤二表单验证
+		function step2Form() {
+			$("#secondBtn").click(function () {
+				var pswInput = $("#psw");
+				var pswConfirmInput = $("#confirmPsw");
+				var eInfoDom = ''; // 错误提示
+				$('.yg-error').remove(); //重置所有错误提示
+
+				if (!verification(pswInput.val(), 'require')) {
+					eInfoDom = errorInfo('请输入新的密码');
+					pswInput.parents('.item').append(eInfoDom); // 输入提示插入到input末尾
+					return;
+				} else if (!verification(pswInput.val(), 'passw')) {
+					eInfoDom = errorInfo('密码为6-20位字母加数字组合');
+					pswInput.parents('.item').append(eInfoDom);
+					return;
+				} else if (pswInput.val() !== pswConfirmInput.val()) {
+					eInfoDom = errorInfo('两次输入不一致');
+					pswConfirmInput.parents('.item').append(eInfoDom);
+					return;
+				} else {
+					// ajax 提交成功后到下一步
+					$("#secondBox").hide();
+					$(".success-tip").show();
+				}
+			})
+		}
+
 		$(function () {
+			selectReason();
+			step1Form();
+			vercodeBtn();
+			step2Form();
+
 			// 密码显示隐藏
-			$(".icon-eyes").click(function() {
+			$(".icon-eyes").click(function () {
 				var inputType = $(this).siblings("input").attr("type");
 				var curInputType = inputType === "password" ? "text" : "password";
-				$(this).toggleClass("on").siblings("input").attr("type",curInputType);
+				$(this).toggleClass("on").siblings("input").attr("type", curInputType);
 			})
-			// 第一步提交
-			$("#firstBtn").click(function () {
-				$("#firstBox").hide();
-				$("#secondBox").show();
-			})
-			// 第二步提交
-			$("#secondBtn").click(function () {
-				$("#secondBox").hide();
-				$(".success-tip").show();
-			})
+
 		});
 	</script>
 </body>
