--- a/src/recRecordDetail.html
+++ b/src/recRecordDetail.html
@@ -26,7 +26,8 @@
 		<ul class="detail-list">
 			<li class="item">
 				<span class="label sn">单号：23232323</span>
-				<span class="val status">待付款</span>
+				<!-- 颜色 class dfk clz ywc wtg yqx -->
+				<span class="val status dfk">待付款</span>
 			</li>
 			<li class="item">
 				<span class="label">充值币种</span>
@@ -53,7 +54,7 @@
 				<span class="val">2019-01-21 12:00:21</span>
 			</li>
 		</ul>
-		
+		<button class="primary comp-btn">已确认转账</button>
 	</div>
 
 	@@include('include/footer.html')
