--- a/src/wdrRecordDetail.html
+++ b/src/wdrRecordDetail.html
@@ -24,21 +24,27 @@
 
 	<div class="container center-block record-detail">
 		<div class="step-pic">
-			<div class="item cur completed">
+			<div class="item cur">
 				<div class="text">发起提现申请</div>
 				<div class="circle"></div>
 			</div>
-			<div class="item cur ing">
+			<div class="item ing">
 				<div class="text">银行处理中</div>
 				<div class="circle"></div>
+				<div class="tip">预计09-26 18:42前到账</div>
 			</div>
+			<!-- <div class="item cancel">
+				<div class="text">已取消</div>
+				<div class="circle"></div>
+				<div class="tip">09-26 18:42</div>
+			</div> -->
 			<div class="item not-start">
 				<div class="text">到账成功</div>
 				<div class="circle"></div>
 			</div>
-			<div class="bar"><span class="inline"></span></div>
+			<div class="bar process2"><span class="inline"></span></div>
 		</div>
-		<div class="estimate-time">预计09-26 18:42前到账</div>
+		<div class="estimate-time"></div>
 		<ul class="detail-list">
 			<li class="item">
 				<span class="label">单号</span>
