--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
@@ -22,7 +21,7 @@
 
 <body>
 	@@include('include/header.html')
-	<div class="banner swiper-container">
+	<div id="swiper1" class="banner swiper-container">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide" style="background-image: url(img/index/banner1.png);">
 				<a href=""></a>
@@ -42,6 +41,19 @@
 		<section class="login-area">
 			<!-- <div class="item login">
 				<div class="title">永高用户登录</div>
+				<div>
+					<select class="input nation" id="country_area">
+						<option class="placeholder" value='' selected style='display:none;'>国家/地区</option>
+						<option value="" style="color:#666;background-color: #E7E7E7" disabled>常用</option>
+						<option value="volvo">Volvo</option>
+						<option value="saab">Saab</option>
+						<option value="opel">Opel</option>
+						<option value="audi">Audi</option>
+						<option value="" style="color:#666;background-color: #E7E7E7" disabled>其他</option>
+						<option value="opel">Opel</option>
+						<option value="audi">Audi</option>
+					</select>
+				</div>
 				<div><input class="input zh" type="text" placeholder="账号" /></div>
 				<div><input class="input pw" type="password" placeholder="密码" /></div>
 				<button class="primary btn">马上登陆</button>
@@ -50,16 +62,16 @@
 						<input type="checkbox" id="remb" value="记住密码" />记住密码
 					</label>
 					<a href="#">忘记密码</a>
-				</div>
-				<div class="login-method-wrap">
+				</div> -->
+			<!-- <div class="login-method-wrap">
 					<ul class="group">
 						<li class="qq"><span>QQ</span></li>
 						<li class="wx"><span>微信</span></li>
 						<li class="wb"><span>微博</span></li>
 					</ul>
 					<a class="regist" href="#">免费注册</a>
-				</div>
-			</div> -->
+				</div> -->
+			<!-- </div> -->
 
 			<!-- 登录后 -->
 			<div class="item login-after">
@@ -96,49 +108,98 @@
 			</div>
 			<!-- 登陆后 END -->
 
-			<div class="item">
-				<div class="pic-wrap">
-					<img src="img/index/lixin.png" width="284" height="174" />
-					<div class="mask">
-						<button class="primary"><a href="gamePlatform.html">进入平台</a></button>
+			<div id="swiper3" class="swiper-container platform-wrap">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide item">
+						<a href="gamePlatform.html">
+							<div class="pic-wrap">
+								<img src="img/index/lixin.png" width="284" height="174" />
+								<div class="mask">
+									<button class="primary">进入平台</button>
+								</div>
+							</div>
+							<div class="item-bottom">
+								<div class="pt-title">立鑫平台</div>
+								<div class="sub-title">最专业平台：百家乐 拥挤</div>
+							</div>
+						</a>
+					</div>
+					<div class=" swiper-slide item">
+						<a href="gamePlatform.html">
+							<div class="pic-wrap">
+								<img src="img/index/oubo.png" width="284" height="174" />
+								<div class="mask">
+									<button class="primary">进入平台</button>
+								</div>
+							</div>
+							<div class="item-bottom">
+								<div class="pt-title">欧博平台</div>
+								<div class="sub-title">最专业平台：龙虎门 拥挤</div>
+							</div>
+						</a>
+					</div>
+					<div class="swiper-slide item">
+						<a href="gamePlatform.html">
+							<div class="pic-wrap">
+								<img src="img/index/AG.png" width="284" height="174" />
+								<div class="mask">
+									<button class="primary">进入平台</button>
+								</div>
+							</div>
+							<div class="item-bottom">
+								<div class="pt-title">AG平台</div>
+								<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
+							</div>
+						</a>
+					</div>
+					<div class="swiper-slide item">
+						<a href="gamePlatform.html">
+							<div class="pic-wrap">
+								<img src="img/index/AG.png" width="284" height="174" />
+								<div class="mask">
+									<button class="primary">进入平台</button>
+								</div>
+							</div>
+							<div class="item-bottom">
+								<div class="pt-title">AG平台</div>
+								<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
+							</div>
+						</a>
+					</div>
+					<div class=" swiper-slide item">
+						<a href="gamePlatform.html">
+							<div class="pic-wrap">
+								<img src="img/index/oubo.png" width="284" height="174" />
+								<div class="mask">
+									<button class="primary">进入平台</button>
+								</div>
+							</div>
+							<div class="item-bottom">
+								<div class="pt-title">欧博平台</div>
+								<div class="sub-title">最专业平台：龙虎门 拥挤</div>
+							</div>
+						</a>
 					</div>
 				</div>
-				<div class="item-bottom">
-					<div class="pt-title">立鑫平台</div>
-					<div class="sub-title">最专业平台：百家乐 拥挤</div>
-				</div>
+				<div id="s3Prev" class="swiper-button-prev"></div>
+				<div id="s3Next" class="swiper-button-next"></div>
 			</div>
-			<div class="item">
-				<div class="pic-wrap">
-					<img src="img/index/oubo.png" width="284" height="174" />
-					<div class="mask">
-						<button class="primary"><a href="gamePlatform.html">进入平台</a></button>
-					</div>
-				</div>
-				<div class="item-bottom">
-					<div class="pt-title">欧博平台</div>
-					<div class="sub-title">最专业平台：龙虎门 拥挤</div>
-				</div>
-			</div>
-			<div class="item">
-				<div class="pic-wrap">
-					<img src="img/index/AG.png" width="284" height="174" />
-					<div class="mask">
-						<button class="primary"><a href="gamePlatform.html">进入平台</a></button>
-					</div>
-				</div>
-				<div class="item-bottom">
-					<div class="pt-title">AG平台</div>
-					<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
-				</div>
-			</div>
-
 		</section>
 
 		<section class="trans-info-area">
 			<div class="left">
-				<div class="info">
-					<p>最新消息:新会员福利，首存即送28元;天天返水 高达3%[ 2018/12/17 21:47:50 ]</p>
+				<div id="swiper2" class="info">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<a href="1111">最新消息:新会员福利，首存即送28元;天天返水 高达3%[ 2018/12/17 21:47:50 ]</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">1111111</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">222222</a>
+						</div>
+					</div>
 				</div>
 				<div class="content">
 					<div class="item">
@@ -202,7 +263,7 @@
 			</div>
 			<div class="content">
 				<div class="item">
-					<img src="img/index/zhuoqiu.png" width="284" height="168" />
+					<div class="img-container" style="background-image: url(img/index/saiche.png)"></div>
 					<div class="item-bottom">
 						<div class="left">
 							<div class="pt-title"><a href="">腾讯桌球</a></div>
@@ -212,7 +273,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img src="img/index/saiche.png" width="284" height="168" />
+					<div class="img-container" style="background-image: url(img/index/saiche.png)"></div>
 					<div class="item-bottom">
 						<div class="left">
 							<div class="pt-title"><a href="">竞技赛车</a></div>
@@ -222,7 +283,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img src="img/index/21dian.png" width="284" height="168" />
+					<div class="img-container" style="background-image: url(img/index/21dian.png)"></div>
 					<div class="item-bottom">
 						<div class="left">
 							<div class="pt-title"><a href="">21点</a></div>
@@ -232,7 +293,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img src="img/index/baijiale.png" width="284" height="168" />
+					<div class="img-container" style="background-image: url(img/index/baijiale.png)"></div>
 					<div class="item-bottom">
 						<div class="left">
 							<div class="pt-title"><a href="">百家乐</a></div>
@@ -256,6 +317,15 @@
 				</div>
 				<div class="modal-body">
 					<div class="login">
+						<div>
+							<select class="input nation" id="country_area">
+								<option class="placeholder" value='' selected style='display:none;'>国家/地区</option>
+								<option value="volvo">Volvo</option>
+								<option value="saab">Saab</option>
+								<option value="opel">Opel</option>
+								<option value="audi">Audi</option>
+							</select>
+						</div>
 						<div><input class="input zh" type="text" placeholder="账号" /></div>
 						<div><input class="input pw" type="password" placeholder="密码" /></div>
 						<button class="primary btn">马上登陆</button>
@@ -266,11 +336,11 @@
 							<a href="#">忘记密码</a>
 						</div>
 						<div class="login-method-wrap">
-							<ul class="group">
+							<!-- <ul class="group">
 								<li class="qq"><span>QQ</span></li>
 								<li class="wx"><span>微信</span></li>
 								<li class="wb"><span>微博</span></li>
-							</ul>
+							</ul> -->
 							<a class="regist" href="#">免费注册</a>
 						</div>
 					</div>
@@ -300,14 +370,19 @@
 								<option value="audi">Audi</option>
 							</select>
 						</div>
-						<div class="input-box zh"><input id="mobile_phone" class="input" type="text" placeholder="邮箱/手机" /></div>
-						<div class="input-box pw"><input id="user_password" class="input" type="password" placeholder="输入6-20位字母、数字密码" /></div>
-						<div class="input-box pw"><input id="confirm_password" class="input" type="password" placeholder="确认密码" /></div>
+						<div class="input-box zh"><input id="mobile_phone" class="input" type="text"
+								placeholder="邮箱/手机" /></div>
+						<div class="input-box pw"><input id="user_password" class="input" type="password"
+								placeholder="输入6-20位字母、数字密码" /></div>
+						<div class="input-box pw"><input id="confirm_password" class="input" type="password"
+								placeholder="确认密码" /></div>
 						<div class="input-box verCode">
-							<input class="input" id="verCode"  id="verification_code" type="text" maxlength="6" placeholder="验证码">
+							<input class="input" id="verCode" id="verification_code" type="text" maxlength="6"
+								placeholder="验证码">
 							<button class="code-btn">获取验证码</button>
 						</div>
-						<div class="input-box yqm"><input class="input" type="text" id="recommend_code" placeholder="邀请码/无可留空" /></div>
+						<div class="input-box yqm"><input class="input" type="text" id="recommend_code"
+								placeholder="邀请码/无可留空" /></div>
 						<div class="protocol"><input checked type="checkbox">
 							我已阅读并同意 <a class="warning" href="">代理服务协议</a>
 						</div>
@@ -330,6 +405,7 @@
 	<!-- endbuild -->
 
 	<script type="text/javascript">
+		ygConfirm("asasafd")
 		//注册提交按钮事件绑定
 		function registBtnEventInit() {
 			$(".regist-modal #register_user").click(function () {
@@ -370,13 +446,29 @@
 		}
 		$(document).ready(function () {
 			// 轮播图
-			var mySwiper = new Swiper('.swiper-container', {
+			var swiper1 = new Swiper('#swiper1', {
 				loop: true, // 循环模式选项
 				autoplay: true,
 				// 如果需要分页器
 				pagination: {
 					el: '.swiper-pagination',
 				}
+			})
+
+			// 消息滚动
+			var swiper2 = new Swiper('#swiper2', {
+				loop: true,
+				direction: 'vertical',
+				simulateTouch: false,
+				autoplay: true
+			})
+
+			var swiper3 = new Swiper('#swiper3', {
+				slidesPerView: 'auto',
+				spaceBetween: 16,
+				resistanceRatio: 0,
+				nextEl: '.swiper-button-next',
+				prevEl: '.swiper-button-prev',
 			})
 
 			//中奖滚动
@@ -388,6 +480,14 @@
 				interTime: 50,
 				trigger: "click"
 			});
+
+			
+			$("#s3Prev").click(function() {
+				swiper3.slidePrev(300);
+			})
+			$("#s3Next").click(function() {
+				swiper3.slideNext(300);
+			})
 
 			registBtnEventInit();
 
