--- a/src/recharge.html
+++ b/src/recharge.html
@@ -47,12 +47,12 @@
 			</ul> -->
 			<!-- 支付 -->
 			<div class="wx-pay form-wrap">
-				<div class="item">
+				<!-- <div class="item">
 					<label>充值账号:</label> <input id="account" class="input-box" type="text" placeholder="输入充值账号">
 				</div>
 				<div class="item">
 					<label>再次输入:</label> <input id="accountConfirm" class="input-box" type="text" placeholder="再次确认账号">
-				</div>
+				</div> -->
 				<div class="item currency-list">
 					<label>选择币种:</label>
 					<select class="input-box" id="currentList">
@@ -63,12 +63,12 @@
 						<option value="4">Audi</option>
 					</select>
 				</div>
-				<div class="item card-list" id="cardList" style="display:none;">
-					<label>选择银行卡:</label>
-					<select class="input-box">
-						<option class="placeholder" value='' style='display:none;'>请选择银行卡</option>
-						<option value="1">adds</option>
-						<option value="2">bba</option>
+				<div class="item card-list">
+					<label>选择银行:</label>
+					<select class="input-box" id="bankList">
+						<option class="placeholder" value='' style='display:none;'>请选择银行</option>
+						<option value="1">工行</option>
+						<option value="2">农行</option>
 						<option value="3">Opel</option>
 						<option value="4">Audi</option>
 					</select>
@@ -110,37 +110,6 @@
 	@@include('include/footer.html')
 	@@include('include/siteTool.html')
 
-	<!-- 充值信息模态框 -->
-	<div class="yg-modal recharge-modal">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<div class="modal-title">充值信息</div>
-					<button class="close"></button>
-				</div>
-				<div class="modal-body">
-					<div class="recg" id="recInfo">
-						<div class="item payMethod"><span class="label">充值方式：</span><span class="val">微信支付</span></div>
-						<div class="item payAcc"><span class="label">充值账号：</span><span class="val">18848614754</span>
-						</div>
-						<div class="item payCurreny"><span class="label">充值币种：</span><span class="val">人民币CNY</span>
-						</div>
-						<div class="item payAmount"><span class="label">充值金额：</span><span
-								class="val warning">￥100</span></div>
-						<div class="item recAmount"><span class="label">到账金额：</span><span class="val"><b
-									class="success">￥99.95</b><b class="cost">(费用0.05%)</b></span></div>
-						<div class="btn-group">
-							<button class="primary submit">确定</button>
-							<button class="cancel">修改</button>
-						</div>
-					</div>
-				</div>
-				<!-- <div class="modal-footer"></div> -->
-			</div>
-		</div>
-	</div>
-	<!-- 充值信息模态框 END-->
-
 	<!-- 公司账户信息模态框 -->
 	<div id="copBankAccModal" class="yg-modal cop-bank-acc-modal" style="display:none;">
 		<div class="modal-dialog">
@@ -181,7 +150,7 @@
 	</div>
 	<!-- 公司账户信息模态框 END-->
 
-	<!-- 支付模态框 -->
+	<!-- 第三方支付模态框 -->
 	<div class="yg-modal pay-modal">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -199,7 +168,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- 支付模态框 END-->
+	<!--  第三方支付模态框 END-->
 
 	<!-- 充值结果模态框 -->
 	<div class="yg-modal success-modal">
@@ -228,14 +197,13 @@
 	<!-- endbuild -->
 
 	<script type="text/javascript">
-		var payMethodText = "微信支付";
-		var payAccText = "";
-		var payAccConfirm = "";
+		var payMethodText = "银行卡支付";
 		var payCurrenyText = "";
 		var payAmount = "100";
 		var payAmountText = "";
 		var recAmountText = "";
 		var currencyId = "";
+		var bankId = "";
 		var curSymbol = "";
 
 		// 选择充值方式
@@ -275,6 +243,13 @@
 				$('.amount-wrap .symbol').text(curSymbol);
 				payAmountText = curSymbol + payAmount;
 				calcRecAoumnt();
+			})
+		}
+
+		// 选择银行
+		function chooseBankId() {
+			$("#bankList").on("change", function () {
+				bankId = $(this).val();
 			})
 		}
 
@@ -325,49 +300,50 @@
 				$("#recInfo .payAmount .val").text(payAmountText);
 				$("#recInfo .recAmount .val").text(recAmountText);
 
-				if (payAccText === '') {
-					var eInfo = errorInfo("请填写充值账号");
-					$("#account").parent().append(eInfo);
-				} else if (payAccConfirm === '') {
-					var eInfo = errorInfo("请再输入一次充值账号");
-					$("#accountConfirm").parent().append(eInfo);
-				} else if (payAccConfirm !== payAccText) {
-					var eInfo = errorInfo("两次输入不一致");
-					$("#accountConfirm").parent().append(eInfo);
-				} else if (currencyId === '') {
+				if (currencyId === '') {
 					eInfo = errorInfo("请选择币种");
 					$("#currentList").parent().append(eInfo);
+				}else if(bankId === '') {
+					eInfo = errorInfo("请选择银行");
+					$("#bankList").parent().append(eInfo);
 				} else {
-					// 显示充值信息模态框
-					ygModalShow('.recharge-modal');
+					// 显示账户信息模态框
+					ygModalShow('#copBankAccModal');
 				}
 			})
 		}
 
 		// 充值信息模态框内的按钮事件
-		function rhgBtnInit() {
-			// 取消
-			$(".recharge-modal .cancel").click(function () {
-				ygModalHide('.recharge-modal');
-			})
-			// 确定
-			$(".recharge-modal .submit").click(function () {
-				ygModalShow('#copBankAccModal')
-				ygModalHide('.recharge-modal');
-			})
-			// 成功后的确定按钮事件绑定
-			$(".success-modal .ok").click(function () {
-				ygModalHide('.success-modal');
-			})
-		}
+		// function rhgBtnInit() {
+		// 	// 取消
+		// 	$(".recharge-modal .cancel").click(function () {
+		// 		ygModalHide('.recharge-modal');
+		// 	})
+		// 	// 确定
+		// 	$(".recharge-modal .submit").click(function () {
+		// 		ygModalShow('#copBankAccModal')
+		// 		ygModalHide('.recharge-modal');
+		// 	})
+		// 	// 已转账按钮
+		// 	$("#copBankAccModal .btn").click(function () {
+		// 		ygModalShow('.success-modal')
+		// 		ygModalHide('#copBankAccModal');
+		// 		$(".success-modal .res-tip").text("审核通过后，充值金额将转入您的钱包");
+		// 	})
+		// 	// 成功后的确定按钮事件绑定
+		// 	$(".success-modal .ok").click(function () {
+		// 		ygModalHide('.success-modal');
+		// 	})
+		// }
 
 		$(function () {
 			// choosePayMethod();
 			chooseCurrency();
+			chooseBankId();
 			chooseAmount();
 			inputAmount();
 			submitVer();
-			rhgBtnInit();
+			// rhgBtnInit();
 		})
 	</script>
 </body>
