--- a/src/rechargeRecord.html
+++ b/src/rechargeRecord.html
@@ -37,8 +37,7 @@
 						<div class="top"><span class="sn">单号：23423435</span><span class="status">待付款</span></div>
 						<div class="time"><span class="label">充值金额</span><span>5000 USD</span></div>
 						<div class="text"><span class="label">充值银行</span><span>中国建设银行(2166)</span></div>
-						<div class="text bottom"><span class="label">2018-08-28 12:00:21</span><a class="go-detail" target="_blank" href="recRecordDetail.html">查看详情
-								></a></div>
+						<div class="text bottom"><span class="label">2018-08-28 12:00:21</span><a class="go-detail" target="_blank" href="recRecordDetail.html">查看详情></a></div>
 					</div>
 				</li>
 				<!-- 处理中 -->
